Release 1: Beta labeling removed. The "Clip Preview Animations" feature is no longer considered a beta feature, and the setting has been renamed, effectively re-enabling it for any user who had it disabled during the beta. Ptz preset thumbnails behave much more nicely on touchscreens. Fixed bug where thumbnail popups were cropped on narrow screens. The UI version number is now visible in the session status toast message (the message must be enabled in UI Settings > Extra). Moved "Context Menu Compatibility Mode" setting to the "Extra" category. The system name in the upper left corner is now a shortcut to a Main Menu item of the user's choice, configurable in UI Settings > Extra.  The default action is "About This UI". Replaced png browser logos in "About This UI" panel with optimized svg versions to improve UI loading time.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -22,6 +22,7 @@ svg.icon
 {
 	transform: rotate(90deg);
 }
+
 .rotate270 svg.icon, svg.rotate270
 {
 	transform: rotate(-90deg);
@@ -228,6 +229,11 @@ body, #layouttop, #layoutleft, #layoutbody, #layoutbottom, .unselectable
 	background-color: #0097F0;
 	color: #FFFFFF;
 }
+
+	#systemnamewrapper.hot
+	{
+		cursor: pointer;
+	}
 
 .topbar_tab
 {
@@ -860,7 +866,7 @@ div.invisibleLabel
 {
 	position: relative;
 	vertical-align: top;
-    overflow: hidden;
+	overflow: hidden;
 }
 
 .presetThumb
@@ -891,6 +897,12 @@ div.invisibleLabel
 	{
 		max-width: 100%;
 		max-height: 100%;
+	}
+
+	#bigThumb canvas
+	{
+		width: 100%;
+		height: 100%;
 	}
 
 .bigThumbDescription
@@ -3045,6 +3057,15 @@ div.invisibleLabel
 	#aboutDialog .lesserSection, #loginDialog .lesserSection
 	{
 		margin-top: 10px;
+	}
+
+	#aboutDialog .browserIcon
+	{
+		display: inline-block;
+		vertical-align: middle;
+		width: 24px;
+		height: 24px;
+		margin-right: 10px;
 	}
 
 .about_icon
